--- a/style/style.css
+++ b/style/style.css
@@ -9,8 +9,13 @@
     color: #FFF;
     text-align: center;
     font-family: Work Sans;
-    font-size: 20px;
+    font-size: 1.25rem;
     font-weight: 600;
+    border-radius: 8px;
+    background: #FF900E;
+    padding: 20px 25px;
+    border: none;
+    cursor: pointer;
 }
 
 /* header styles */
@@ -45,6 +50,9 @@ nav ul li a{
 }
 
 /* banner style */
+.banner{
+    text-align: center;
+}
 .banner-content{
     max-width: 800px;
     text-align: center;
@@ -61,3 +69,32 @@ nav ul li a{
     line-height: 26px
 }
 
+.banner img{
+    margin-top: 15px;
+    width: 100%;
+}
+
+
+
+
+/* responsive media querey */
+/* mobile devices */
+@media screen and (max-width: 576px){
+    header{
+        padding: 20px;
+    }
+    nav{
+        flex-direction: column;
+    }
+}
+
+/* tablet or medium devices */
+
+@media screen and (min-width: 576px) and (max-width: 960px) {
+    header{
+        padding: 50px;
+    }
+    nav{
+        flex-direction: column;
+    }
+}
