--- a/style/style.css
+++ b/style/style.css
@@ -74,9 +74,43 @@ nav ul li a{
     width: 100%;
 }
 
+/* main style */
+main{
+    max-width: 1440px;
+    margin: 0 auto;
+}
 
+/* teams style */
+.teams-container{
+    display: flex;
+    align-items: center;
+}
 
-
+.teams-img-container{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1.5rem;
+}
+.teams-content{
+    padding-right: 70px;
+    padding-left: 70px;
+}
+.teams-title{
+    font-size: 2.85rem;
+    
+}
+.teams-title .quick{
+    color: #727272;
+    font-weight: 700;
+}
+.teams-feachures{
+    color: #FF900E;
+    font-family: Work Sans;
+    font-size: 45px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
 /* responsive media querey */
 /* mobile devices */
 @media screen and (max-width: 576px){
@@ -88,6 +122,7 @@ nav ul li a{
     }
 }
 
+
 /* tablet or medium devices */
 
 @media screen and (min-width: 576px) and (max-width: 960px) {
@@ -98,3 +133,5 @@ nav ul li a{
         flex-direction: column;
     }
 }
+
+
