--- a/style/style.css
+++ b/style/style.css
@@ -140,8 +140,15 @@ main{
     .teams-img-container{
         grid-template-columns: 1fr;
     }
+    .teams-content{
+    padding-right: 20px;
+    padding-left: 20px;
+    }
+    nav ul li{
+        padding: 5px 5px;
+    }
+    }
 
-}
 
 
 /* tablet or medium devices */
