--- a/style/style.css
+++ b/style/style.css
@@ -122,7 +122,31 @@ main{
     line-height: normal;
 }
 
+/* facts section  */
+.facts-card-contianer{
+    display: flex;
+    justify-content: space-around;
+}
+.facts-card-contianer .card{
+    border-radius: 8px;
+    border: 1px solid #FF900E;
+    text-align: center;
+    padding: 30px;
 
+}
+.card .card-stats{
+    font-size: 2.8rem;
+    color: #424242;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+.card-title{
+    color: #727272;
+    font-size: 1.8rem;
+    font-style: normal;
+    font-weight: 600;
+    margin-top: 5px;
+}
 
 
 
