--- a/style/style.css
+++ b/style/style.css
@@ -158,18 +158,21 @@ main{
     header{
         padding: 20px;
     }
-    nav, .teams-container{
+    nav, .teams-container, .facts-card-contianer{
         flex-direction: column;
     }
     .teams-img-container{
         grid-template-columns: 1fr;
     }
-    .teams-content{
+    .teams-content, .facts-card-contianer{
     padding-right: 20px;
     padding-left: 20px;
     }
     nav ul li{
         padding: 3px;
+    }
+    .facts-card-contianer{
+        gap: 15px;
     }
     }
 
