--- a/style/style.css
+++ b/style/style.css
@@ -132,7 +132,7 @@ main{
     border: 1px solid #FF900E;
     text-align: center;
     padding: 30px;
-
+    
 }
 .card .card-stats{
     font-size: 2.8rem;
@@ -148,8 +148,28 @@ main{
     margin-top: 5px;
 }
 
-
-
+/* sponsors style */
+.Sponsors{
+    text-align: center;
+}
+.section-title-sponsor{
+    color: var(--Dark-01, #131313);
+    font-family: Work Sans;
+    font-size: 45px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+.sponsors-img-container{
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 50px;
+    gap: 20px;
+    align-items: center;
+}
+.sponsors-img-container img{
+    width: 165px;
+}
 
 
 /* responsive media querey */
@@ -158,15 +178,18 @@ main{
     header{
         padding: 20px;
     }
-    nav, .teams-container, .facts-card-contianer{
+    nav, 
+    .teams-container, 
+    .facts-card-contianer,
+    .sponsors-img-container{
         flex-direction: column;
     }
     .teams-img-container{
         grid-template-columns: 1fr;
     }
     .teams-content, .facts-card-contianer{
-    padding-right: 20px;
-    padding-left: 20px;
+        padding-right: 20px;
+        padding-left: 20px;
     }
     nav ul li{
         padding: 3px;
@@ -174,7 +197,7 @@ main{
     .facts-card-contianer{
         gap: 15px;
     }
-    }
+}
 
 
 
@@ -184,10 +207,11 @@ main{
     header{
         padding: 50px;
     }
-    nav, .teams-container{
+    nav, .teams-container,
+    .sponsors-img-container{
         flex-direction: column;
     }
-
+    
 }
 
 
