--- a/style/style.css
+++ b/style/style.css
@@ -19,7 +19,14 @@
     border: none;
     cursor: pointer;
 }
-
+.section-title{
+    color: var(--Dark-01, #131313);
+font-family: Work Sans;
+font-size: 45px;
+font-style: normal;
+font-weight: 700;
+line-height: normal;
+}
 /* header styles */
 header{
     background: rgba(255, 144, 14, 0.10);
@@ -122,6 +129,44 @@ main{
     line-height: normal;
 }
 
+/* featchures section */
+.features{
+    margin-top: 150px;
+    display: flex;
+    gap: 140px;
+}
+
+.features .card{
+    border-radius: 8px;
+    background: #FFF;
+    box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.06);
+    padding: 30px;
+    margin-bottom: 20px;
+}
+.features .section-title{
+    border-left: 5px solid #FF900E;
+    padding-left: 20px;
+}
+
+.features img{
+    height: 90%;
+    margin-left: 90px;
+}
+.ten-year-batch{
+    border-radius: 8px;
+    background-color: #FF900E;
+    color: white;
+    width: 342px;
+    text-align: center;
+    padding: 40px;
+    position: relative;
+    bottom: 100px;
+}
+.ten-year-batch h2{
+    font-size: 4rem;
+    margin: 0px;
+
+}
 /* facts section  */
 .facts-card-contianer{
     display: flex;
@@ -190,6 +235,15 @@ footer p{
     padding: 30px;
 }
 
+
+
+
+
+
+
+
+
+
 /* responsive media querey */
 /* mobile devices */
 @media screen and (max-width: 576px){
@@ -199,7 +253,9 @@ footer p{
     nav, 
     .teams-container, 
     .facts-card-contianer,
-    .sponsors-img-container{
+    .sponsors-img-container,
+    .features
+    {
         flex-direction: column;
     }
     .teams-img-container{
@@ -215,6 +271,17 @@ footer p{
     .facts-card-contianer{
         gap: 15px;
     }
+
+    .features-img img{
+        width: 90%;
+        margin-left: 0;
+    }
+    .ten-year-batch{
+        position: static;
+        max-width: 300px;
+    }
+
+
 }
 
 
@@ -226,10 +293,15 @@ footer p{
         padding: 50px;
     }
     nav, .teams-container,
-    .sponsors-img-container{
+    .sponsors-img-container,
+    .features
+    {
         flex-direction: column;
     }
-    
+    .features-img img{
+        width: 90%;
+        margin-left: 15px;
+    }
 }
 
 
